Added check on 'Sale' + code cleaning

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EP, NG, AP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# EP, NG, AP\n",
     "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -24,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,25 +53,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Types checking and basic statistics"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "BasketID            object\n",
-       "BasketDate          object\n",
-       "Sale                object\n",
-       "CustomerID         float64\n",
-       "CustomerCountry     object\n",
-       "ProdID              object\n",
-       "ProdDescr           object\n",
-       "Qta                  int64\n",
-       "dtype: object"
-      ]
+      "text/plain": "BasketID            object\nBasketDate          object\nSale                object\nCustomerID         float64\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +105,7 @@
       " 6   ProdDescr        471157 non-null  object \n",
       " 7   Qta              471910 non-null  int64  \n",
       "dtypes: float64(1), int64(1), object(6)\n",
-      "memory usage: 21.6+ MB\n"
+      "memory usage: 32.4+ MB\n"
      ]
     }
    ],
@@ -121,101 +115,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "BasketID           False\nBasketDate         False\nSale               False\nCustomerID          True\nCustomerCountry    False\nProdID             False\nProdDescr           True\nQta                False\ndtype: bool"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sale</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Qta</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>471910.000000</td>\n",
-       "      <td>406830.000000</td>\n",
-       "      <td>471910.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4.030945</td>\n",
-       "      <td>15287.684160</td>\n",
-       "      <td>10.716533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>83.769380</td>\n",
-       "      <td>1713.603074</td>\n",
-       "      <td>231.355136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>-11062.060000</td>\n",
-       "      <td>12346.000000</td>\n",
-       "      <td>-80995.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.250000</td>\n",
-       "      <td>13953.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2.080000</td>\n",
-       "      <td>15152.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>3.750000</td>\n",
-       "      <td>16791.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>38970.000000</td>\n",
-       "      <td>18287.000000</td>\n",
-       "      <td>80995.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Sale     CustomerID            Qta\n",
-       "count  471910.000000  406830.000000  471910.000000\n",
-       "mean        4.030945   15287.684160      10.716533\n",
-       "std        83.769380    1713.603074     231.355136\n",
-       "min    -11062.060000   12346.000000  -80995.000000\n",
-       "25%         1.250000   13953.000000       1.000000\n",
-       "50%         2.080000   15152.000000       4.000000\n",
-       "75%         3.750000   16791.000000      12.000000\n",
-       "max     38970.000000   18287.000000   80995.000000"
-      ]
+      "text/plain": "          CustomerID            Qta\ncount  406830.000000  471910.000000\nmean    15287.684160      10.716533\nstd      1713.603074     231.355136\nmin     12346.000000  -80995.000000\n25%     13953.000000       1.000000\n50%     15152.000000       4.000000\n75%     16791.000000      12.000000\nmax     18287.000000   80995.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CustomerID</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>406830.000000</td>\n      <td>471910.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>15287.684160</td>\n      <td>10.716533</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1713.603074</td>\n      <td>231.355136</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>12346.000000</td>\n      <td>-80995.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>13953.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>15152.000000</td>\n      <td>4.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>16791.000000</td>\n      <td>12.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>18287.000000</td>\n      <td>80995.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,54 +156,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0         2.55\n",
-      "1         3.39\n",
-      "2         2.75\n",
-      "3         3.39\n",
-      "4         3.39\n",
-      "          ... \n",
-      "541905     2.1\n",
-      "541906    4.15\n",
-      "541907    4.15\n",
-      "541908    4.95\n",
-      "541909      18\n",
-      "Name: Sale, Length: 471910, dtype: object\n",
-      "-------------\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "print(df['Sale'])\n",
-    "print(\"-------------\")\n",
-    "df['Sale'].replace(to_replace=r'(\\d+),(\\d*)', value=r'\\1.\\2', regex=True, inplace=True)"
-   ]
+    "#### Fixing 'Sale':\n",
+    "* Replace commas with dots\n",
+    "* Cast it into a float field\n",
+    "\n",
+    "Check if any element of 'Sale' contains letters"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Sale'] = df['Sale'].astype(float)"
+    "import string\n",
+    "for elem in df['Sale']:\n",
+    "    for c in elem:\n",
+    "        if c in string.ascii_letters:\n",
+    "            print(elem)\n",
+    "            break"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The attribute 'Sale' does not contain any null value or letters, only numbers,\n",
+    "but we need to substitute commas with dots and cast the filed into float"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Changed commas into dots:\n",
+      "0    2.55\n",
+      "1    3.39\n",
+      "2    2.75\n",
+      "3    3.39\n",
+      "4    3.39\n",
+      "Name: Sale, dtype: float64\n",
+      "\n",
+      "Changed type into float64\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 471910 entries, 0 to 541909\n",
       "Data columns (total 8 columns):\n",
@@ -287,41 +229,24 @@
       " 6   ProdDescr        471157 non-null  object \n",
       " 7   Qta              471910 non-null  int64  \n",
       "dtypes: float64(2), int64(1), object(5)\n",
-      "memory usage: 23.4+ MB\n"
+      "memory usage: 32.4+ MB\n"
      ]
     }
    ],
    "source": [
+    "df['Sale'].replace(to_replace=r'(\\d+),(\\d*)', value=r'\\1.\\2', regex=True, inplace=True)\n",
+    "print('Changed commas into dots:')\n",
+    "print(df['Sale'][0 : 5])\n",
+    "df['Sale'] = df['Sale'].astype(float)\n",
+    "print('\\nChanged type into float64:')\n",
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BasketID           False\n",
-       "BasketDate         False\n",
-       "Sale               False\n",
-       "CustomerID          True\n",
-       "CustomerCountry    False\n",
-       "ProdID             False\n",
-       "ProdDescr           True\n",
-       "Qta                False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
    ],
-   "source": [
-    "df.isnull().any()"
-   ]
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
