Added basic check on negative 'Qta'

--- a/project.ipynb
+++ b/project.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -214,7 +214,7 @@
       "4    3.39\n",
       "Name: Sale, dtype: float64\n",
       "\n",
-      "Changed type into float64\n",
+      "Changed type into float64:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 471910 entries, 0 to 541909\n",
       "Data columns (total 8 columns):\n",
@@ -249,8 +249,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Checking 'Qta':"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -258,38 +270,50 @@
      "output_type": "stream",
      "text": [
       "Quantity values\n",
-      "TOT :  471910\n",
+      "TOT entries:  471910\n",
       " < 0:  9752\n",
       " > 100:  4814\n",
-      " > 1000:  110\n"
+      " > 1000:  110\n",
+      "\n",
+      "\n",
+      "From the rows with a negative \"Qta\":\n",
+      "9675 belong to a \"Discount\" product\n",
+      "77 belong to a normal product\n",
+      "Therefore the negative quantity seems not to be related to discounts\n"
      ]
     }
    ],
    "source": [
     "print(\"Quantity values\")\n",
-    "print(\"TOT : \", len(df['Qta']))\n",
+    "print(\"TOT entries: \", len(df['Qta']))\n",
     "print(\" < 0: \", len(df[df['Qta'] < 0]))\n",
     "print(\" > 100: \", len(df[df['Qta'] > 100]))\n",
-    "print(\" > 1000: \", len(df[df['Qta'] > 1000]))"
+    "print(\" > 1000: \", len(df[df['Qta'] > 1000]))\n",
+    "print('\\n')\n",
+    "\n",
+    "discount_counter = nondisc_counter = 0\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['Qta'] < 0:\n",
+    "        if row['ProdDescr'] != 'Discount':\n",
+    "            discount_counter += 1\n",
+    "        else:\n",
+    "            nondisc_counter += 1\n",
+    "\n",
+    "print('From the rows with a negative \"Qta\":')\n",
+    "print(f'{discount_counter} belong to a \"Discount\" product')\n",
+    "print(f'{nondisc_counter} belong to a normal product')\n",
+    "print('Therefore the negative quantity seems not to be related to discounts')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sale values\n",
-      "TOT :  471910\n",
-      " < 0:  2\n",
-      " > 100:  634\n",
-      " > 1000:  84\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print(\"Sale values\")\n",
     "print(\"TOT : \", len(df['Sale']))\n",
