--- a/CustomerAnalysis.ipynb
+++ b/CustomerAnalysis.ipynb
@@ -226,23 +226,22 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12422    2\n",
-       "12370    2\n",
        "12394    2\n",
+       "12422    2\n",
        "12455    2\n",
        "12457    2\n",
-       "        ..\n",
-       "17362    1\n",
-       "14803    1\n",
-       "12381    1\n",
-       "13678    1\n",
-       "12395    1\n",
-       "Name: CustomerID, Length: 4372, dtype: int64"
+       "12429    2\n",
+       "12417    2\n",
+       "12431    2\n",
+       "12370    2\n",
+       "Name: CustomerID, dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -252,10 +251,11 @@
    ],
    "source": [
     "# CustomerCounty : value from original dataframe\n",
+    "data['CustomerCountry'] = ''\n",
     "#data = data.join(pd.core.frame.DataFrame({'CustomerID':df['CustomerID'], 'CustomerCountry':df['CustomerCountry']}).drop_duplicates().set_index('CustomerID'), on='CustomerID')\n",
     "\n",
     "tmp = pd.core.frame.DataFrame({'CustomerID':df['CustomerID'], 'CustomerCountry':df['CustomerCountry']}).drop_duplicates()\n",
-    "tmp['CustomerID'].value_counts()\n",
+    "tmp['CustomerID'].value_counts()[0:8]\n",
     "# 4372 distinct customers - 4380 elements in tmp\n",
     "# 8 customers have two different nationalities"
    ]
@@ -263,6 +263,43 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12370-Cyprus\n",
+      "12370-Austria\n",
+      "12394-Denmark\n",
+      "12394-Belgium\n",
+      "12417-Spain\n",
+      "12417-Belgium\n",
+      "12422-Australia\n",
+      "12422-Switzerland\n",
+      "12429-Austria\n",
+      "12429-Denmark\n",
+      "12431-Australia\n",
+      "12431-Belgium\n",
+      "12455-Cyprus\n",
+      "12455-Spain\n",
+      "12457-Cyprus\n",
+      "12457-Switzerland\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find entries with multiple nationality\n",
+    "counts = tmp['CustomerID'].value_counts().items()\n",
+    "count_dict = {x[0]:x[1] for x in counts}\n",
+    "for _, row in tmp.sort_values(by=['CustomerID']).iterrows():\n",
+    "    if count_dict[row['CustomerID']] > 1:\n",
+    "        print(f\"{row['CustomerID']}-{row['CustomerCountry']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +309,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iu: the number of distinct items bought by a customer in the period of observation.\n",
+    "data['Iu'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imax: the maximum number of items purchased by a customer during a shopping session\n",
+    "data['Imax'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# E: the Shannon entropy on the purchasing behaviour of the customer\n",
+    "data['E'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -297,88 +364,136 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CustomerID</th>\n",
+       "      <th>CustomerCountry</th>\n",
        "      <th>I</th>\n",
+       "      <th>Iu</th>\n",
+       "      <th>Imax</th>\n",
+       "      <th>E</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>17850</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>13047</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12583</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>13748</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>15100</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4367</th>\n",
        "      <td>13436</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4368</th>\n",
        "      <td>15520</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4369</th>\n",
        "      <td>13298</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4370</th>\n",
        "      <td>14569</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4371</th>\n",
        "      <td>12713</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4372 rows × 2 columns</p>\n",
+       "<p>4372 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     CustomerID  I\n",
-       "0         17850  0\n",
-       "1         13047  0\n",
-       "2         12583  0\n",
-       "3         13748  0\n",
-       "4         15100  0\n",
-       "...         ... ..\n",
-       "4367      13436  0\n",
-       "4368      15520  0\n",
-       "4369      13298  0\n",
-       "4370      14569  0\n",
-       "4371      12713  0\n",
+       "     CustomerID CustomerCountry  I  Iu  Imax  E\n",
+       "0         17850                  0   0     0  0\n",
+       "1         13047                  0   0     0  0\n",
+       "2         12583                  0   0     0  0\n",
+       "3         13748                  0   0     0  0\n",
+       "4         15100                  0   0     0  0\n",
+       "...         ...             ... ..  ..   ... ..\n",
+       "4367      13436                  0   0     0  0\n",
+       "4368      15520                  0   0     0  0\n",
+       "4369      13298                  0   0     0  0\n",
+       "4370      14569                  0   0     0  0\n",
+       "4371      12713                  0   0     0  0\n",
        "\n",
-       "[4372 rows x 2 columns]"
+       "[4372 rows x 6 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
