Tidied DataUnderstanding_DataCleaning.ipynb

--- a/CustomerAnalysis.ipynb
+++ b/CustomerAnalysis.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats as stats\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Handle NAN CustomerID rows\n",
+    "# Handle NAN CustomerID rows -> drop them\n",
     "# print(len(df[~df['CustomerID'].notnull()]))\n",
     "df.drop(df[~df['CustomerID'].notnull()].index, inplace=True)"
    ]
