--- a/DataUnderstanding_DataCleaning.ipynb
+++ b/DataUnderstanding_DataCleaning.ipynb
@@ -387,15 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Checking rows with no CustomerID...\n",
-      "Number of distinct orders:  22190\n",
-      "Number of orders without CustomerID:  0\n"
+      "Number of distinct orders:  24627\n",
+      "Number of orders without CustomerID:  2437\n"
      ]
     }
    ],
@@ -434,45 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following orders happen to have a NaN CustomerID but a positive quantity:  768\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check if for every one of the orders without CustomerID the quantity is negative\n",
-    "anomalous_BIDs = []\n",
-    "for index, row in df[df['BasketID'].isin(orders_wo_cust)].iterrows():\n",
-    "    if row['BasketID'] not in anomalous_BIDs and row['Qta'] < 0:\n",
-    "        anomalous_BIDs.append(row['BasketID'])\n",
-    "\n",
-    "print(\"The following orders happen to have a NaN CustomerID but a positive quantity: \", len(anomalous_BIDs))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'orders_wo_cust' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-20-0c99268b1a47>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# Delete from dataframe records belonging to orders without customer\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mdf\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdf\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m~\u001B[0m\u001B[0mdf\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'BasketID'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0misin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0morders_wo_cust\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[1;32mdel\u001B[0m \u001B[0morders_wo_cust\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34mf\"The dataframe contains now {len(df)} rows\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'orders_wo_cust' is not defined"
+      "The dataframe contains now 401605 rows\n"
      ]
     }
    ],
