Placed the same analysis on Qta before and after analyzing and removing orders with NaN CustomerID to show evidences

--- a/DataUnderstanding_DataCleaning.ipynb
+++ b/DataUnderstanding_DataCleaning.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -70,40 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 466678 entries, 0 to 541909\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column           Non-Null Count   Dtype  \n",
-      "---  ------           --------------   -----  \n",
-      " 0   BasketID         466678 non-null  object \n",
-      " 1   BasketDate       466678 non-null  object \n",
-      " 2   Sale             466678 non-null  object \n",
-      " 3   CustomerID       401605 non-null  float64\n",
-      " 4   CustomerCountry  466678 non-null  object \n",
-      " 5   ProdID           466678 non-null  object \n",
-      " 6   ProdDescr        465925 non-null  object \n",
-      " 7   Qta              466678 non-null  int64  \n",
-      "dtypes: float64(1), int64(1), object(6)\n",
-      "memory usage: 32.0+ MB\n",
-      "BasketID            object\n",
-      "BasketDate          object\n",
-      "Sale                object\n",
-      "CustomerID         float64\n",
-      "CustomerCountry     object\n",
-      "ProdID              object\n",
-      "ProdDescr           object\n",
-      "Qta                  int64\n",
-      "dtype: object \n",
-      "\n",
-      " None\n"
-     ]
+     "data": {
+      "text/plain": "BasketID            object\nBasketDate          object\nSale                object\nCustomerID         float64\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -112,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -148,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "outputs": [
     {
      "data": {
       "text/plain": "BasketID           False\nBasketDate         False\nSale               False\nCustomerID          True\nCustomerCountry    False\nProdID             False\nProdDescr           True\nQta                False\ndtype: bool"
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +155,7 @@
       "text/plain": "          CustomerID            Qta\ncount  401605.000000  466678.000000\nmean    15281.154341      10.806528\nstd      1714.008869     232.627771\nmin     12346.000000  -80995.000000\n25%     13939.000000       2.000000\n50%     15145.000000       4.000000\n75%     16784.000000      12.000000\nmax     18287.000000   80995.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CustomerID</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>401605.000000</td>\n      <td>466678.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>15281.154341</td>\n      <td>10.806528</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1714.008869</td>\n      <td>232.627771</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>12346.000000</td>\n      <td>-80995.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>13939.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>15145.000000</td>\n      <td>4.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>16784.000000</td>\n      <td>12.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>18287.000000</td>\n      <td>80995.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
       "text/plain": "       BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n0        536365  01/12/10 08:26  2,55     17850.0  United Kingdom  85123A   \n1        536365  01/12/10 08:26  3,39     17850.0  United Kingdom   71053   \n2        536365  01/12/10 08:26  2,75     17850.0  United Kingdom  84406B   \n3        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029G   \n4        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029E   \n...         ...             ...   ...         ...             ...     ...   \n541905   581587  09/12/11 12:50   2,1     12680.0          France   22899   \n541906   581587  09/12/11 12:50  4,15     12680.0          France   23254   \n541907   581587  09/12/11 12:50  4,15     12680.0          France   23255   \n541908   581587  09/12/11 12:50  4,95     12680.0          France   22138   \n541909   581587  09/12/11 12:50    18     12680.0          France    POST   \n\n                                  ProdDescr  Qta  \n0        WHITE HANGING HEART T-LIGHT HOLDER    6  \n1                       WHITE METAL LANTERN    6  \n2            CREAM CUPID HEARTS COAT HANGER    8  \n3       KNITTED UNION FLAG HOT WATER BOTTLE    6  \n4            RED WOOLLY HOTTIE WHITE HEART.    6  \n...                                     ...  ...  \n541905         CHILDREN'S APRON DOLLY GIRL     6  \n541906        CHILDRENS CUTLERY DOLLY GIRL     4  \n541907      CHILDRENS CUTLERY CIRCUS PARADE    4  \n541908        BAKING SET 9 PIECE RETROSPOT     3  \n541909                              POSTAGE    1  \n\n[466678 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BasketID</th>\n      <th>BasketDate</th>\n      <th>Sale</th>\n      <th>CustomerID</th>\n      <th>CustomerCountry</th>\n      <th>ProdID</th>\n      <th>ProdDescr</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,55</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>85123A</td>\n      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>71053</td>\n      <td>WHITE METAL LANTERN</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,75</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84406B</td>\n      <td>CREAM CUPID HEARTS COAT HANGER</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029G</td>\n      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029E</td>\n      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>541905</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>2,1</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22899</td>\n      <td>CHILDREN'S APRON DOLLY GIRL</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>541906</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23254</td>\n      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541907</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23255</td>\n      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541908</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,95</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22138</td>\n      <td>BAKING SET 9 PIECE RETROSPOT</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>541909</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>18</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>POST</td>\n      <td>POSTAGE</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>466678 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "outputs": [
     {
      "name": "stdout",
@@ -312,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -329,7 +305,7 @@
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -375,6 +351,59 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Analyzing 'Qta':\n",
+    "* Check rows with **negative** quantity:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows with negative Qta:  9719\n",
+      "Number of rows with negative Qta and a normal BaskedID:  668\n",
+      "Number of rows with negative Qta and an empty/null/'?' ProdDescr:  22\n",
+      "Number of rows with negative Qta and a null/nan/empty CustomerID:  847\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check rows with negative quantity\n",
+    "bid_normal = 0  # counter of rows with normal BasketID (but negative Qta)\n",
+    "proddescr_null = 0  # counter of rows with a empty or null or '?' ProdDescr\n",
+    "cid_null = 0    # counter of rows with a null/nan/empty CustomerID\n",
+    "for index, row in df[df['Qta'] < 0].iterrows():\n",
+    "    if not 'C' in row['BasketID'] and not 'A' in row['BasketID']:\n",
+    "        bid_normal += 1\n",
+    "    if row['ProdDescr'] in ('','?'):\n",
+    "        proddescr_null += 1\n",
+    "    if pd.isna(row['CustomerID']):\n",
+    "        cid_null += 1\n",
+    "\n",
+    "print(\"Number of rows with negative Qta: \", len(df[df['Qta'] < 0]))\n",
+    "print(\"Number of rows with negative Qta and a normal BaskedID: \", bid_normal)\n",
+    "print(\"Number of rows with negative Qta and an empty/null/'?' ProdDescr: \", proddescr_null)\n",
+    "print(\"Number of rows with negative Qta and a null/nan/empty CustomerID: \", cid_null)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Analyzing 'CustomerID':\n",
     "* Check for how many orders it's not possible to find a CustomerID"
    ],
@@ -387,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
@@ -434,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -460,8 +489,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Analyzing 'Qta':\n",
-    "* Check rows with **negative** quantity:"
+    "Let's perform again the analysis on Qta we did before analysing CustomerID:"
    ],
    "metadata": {
     "collapsed": false,
@@ -472,27 +500,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows with negative Qta:  9719\n",
-      "Number of rows with negative Qta and a normal BaskedID:  668\n",
-      "Number of rows with negative Qta and an empty/null/'?' ProdDescr:  22\n",
-      "Number of rows with negative Qta and a null/nan/empty CustomerID:  847\n"
+      "Number of rows with negative Qta:  8872\n",
+      "Number of rows with negative Qta and a normal BaskedID:  0\n",
+      "Number of rows with negative Qta and an empty/null/'?' ProdDescr:  0\n",
+      "Number of rows with negative Qta and a null/nan/empty CustomerID:  0\n"
      ]
     }
    ],
    "source": [
     "# Check rows with negative quantity\n",
-    "df_negQta = df[df['Qta'] < 0]\n",
-    "\n",
     "bid_normal = 0  # counter of rows with normal BasketID (but negative Qta)\n",
     "proddescr_null = 0  # counter of rows with a empty or null or '?' ProdDescr\n",
     "cid_null = 0    # counter of rows with a null/nan/empty CustomerID\n",
-    "for index, row in df_negQta.iterrows():\n",
+    "for index, row in df[df['Qta'] < 0].iterrows():\n",
     "    if not 'C' in row['BasketID'] and not 'A' in row['BasketID']:\n",
     "        bid_normal += 1\n",
     "    if row['ProdDescr'] in ('','?'):\n",
@@ -500,7 +526,7 @@
     "    if pd.isna(row['CustomerID']):\n",
     "        cid_null += 1\n",
     "\n",
-    "print(\"Number of rows with negative Qta: \", len(df_negQta))\n",
+    "print(\"Number of rows with negative Qta: \", len(df[df['Qta'] < 0]))\n",
     "print(\"Number of rows with negative Qta and a normal BaskedID: \", bid_normal)\n",
     "print(\"Number of rows with negative Qta and an empty/null/'?' ProdDescr: \", proddescr_null)\n",
     "print(\"Number of rows with negative Qta and a null/nan/empty CustomerID: \", cid_null)"
@@ -509,6 +535,19 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This shows that orders with a NaN _CustomerID_ in every one of their records had also anomalous values of _BasketID_\n",
+    "and _ProdDescr_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
